[package]
name = "gemini_proxy"
version = "0.1.1"
edition = "2021"
description = "A high-performance, stateless OpenAI-compatible API gateway proxy for gemini-cli"
license = "Apache-2.0"
repository = "https://github.com/FlerAlex/gemini_proxy"
readme = "README.md"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
